k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grupo_1_3
  namespace: thymeleaf
spec:
  selector:
    matchLabels:
      app: grupo_1_3
  replicas: 1
  template:
    metadata:
      labels:
         app: grupo_1_3
    spec:
      imagePullSecrets:
         - name: github-secret
      containers:
         - name: grupo_1_3
           image: localhost:5000 grupo_1_3:l grupo_1_3
           ports:
              - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: grupo_1_3
  namespace: thymeleaf
spec:
#  type: NodePort
  selector:
    app: grupo_1_3
  ports:
    - protocol: TCP
      port: 8080
#      nodePort: 30001
      targetPort: 8080
